[Linux] Black vertical bar in native-styled select dropdown widget, on Ubuntu 19.10
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox72 | --- | unaffected |
| firefox73 | --- | unaffected |
| firefox74 | + | fixed |
| firefox75 | --- | fixed |
People
(Reporter: dholbert, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files, 1 obsolete file)
STR:
- View this data URI:
data:text/html,<select>
ACTUAL RESULTS:
There's an unexpected black vertical bar to the left of the dropdown arrow.
EXPECTED RESULTS:
No such vertical bar.
Screenshot attached. I'm using Ubuntu 19.10 with the default theme (Yaru)
mozregression says this regressed from
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=23091d9bdbcd200e1b535696a5f6d38b41889493&tochange=accd5248459408246d4bf269125120072dbee608
which is bug 1613130.
| Reporter | ||
Comment 1•6 years ago
|
||
It looks like that regressing bug's patch made us change to start drawing something (instead of drawing nothing) for missing widget-parts like MOZ_GTK_COMBOBOX_SEPARATOR (which seems to be the widget-part that's involved here).
In this case, the "drawing something" is drawing an awkward-looking black bar.
stransky, would you mind taking a look? Can/should we go back to drawing nothing for this (perhaps-intentionally) unimplemented widget?
| Reporter | ||
Comment 2•6 years ago
|
||
[Tracking Requested - why for this release]: visual regression in Firefox 74 (which is the beta version, as of some point this week)
| Reporter | ||
Comment 3•6 years ago
|
||
| Reporter | ||
Updated•6 years ago
|
| Assignee | ||
Comment 4•6 years ago
|
||
Sure, will look at it.
Updated•6 years ago
|
| Assignee | ||
Comment 5•6 years ago
|
||
Comment 7•6 years ago
|
||
| bugherder | ||
Comment 9•6 years ago
|
||
Please nominate this for Beta approval when you get a chance.
| Assignee | ||
Comment 10•6 years ago
|
||
Comment on attachment 9125760 [details]
Bug 1614421 [Linux] Use GtkInvisible as a fallback widget, r?jhorak
Beta/Release Uplift Approval Request
- User impact if declined: Visual glitch when combobox is rendered on Ubuntu/Yaru theme.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Linux only theme fix.
- String changes made/needed: none
Comment 11•6 years ago
|
||
Comment on attachment 9125760 [details]
Bug 1614421 [Linux] Use GtkInvisible as a fallback widget, r?jhorak
Low risk visual fix on Linux, uplift approved for 74.0b3, thanks.
Comment 12•6 years ago
|
||
| bugherder uplift | ||
Comment 13•6 years ago
|
||
Hi,
Still occurring: 75.0a1 (2020-02-24) (64-bit)
Thanks!
| Reporter | ||
Comment 14•6 years ago
•
|
||
Yeah, I'm seeing the white bar shown in comment 13 as well, in current Nightly as well as in Nightly 2020-02-12 (the day after the patch landed). I'm on Ubuntu 19.10 still.
So: it looks like the patch just changed the vertical stripe from black to white, unfortunately. :-/ It's more subtle, but still there. It's too bad we didn't notice this sooner. stransky, should we reopen, or track this in a new bug?
| Assignee | ||
Comment 15•6 years ago
|
||
Let's reopen, I'll attach the patch here.
| Assignee | ||
Comment 16•6 years ago
|
||
With Bug 1613130 fixed we may not need a fallback widget so let's remove this workaround.
Comment 17•6 years ago
|
||
Martin, I would prefer a patch and an uplift request in a new bug, thanks.
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
Description
•