Bug 1614421 [Linux] Use GtkInvisible as a fallback widget, r=jhorak a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D62412

--HG--
extra : source : dbf22b1c04bdd1a7c1bad51913d21e9e56152223